# wycf_ble_mcp

./: .gitignore  LICENSE  PROTOCOL_NOTES.md  README.md  __init__.py  audio_level.py  ble.py  bridge.py  cli.py  known.py  log_parser.py  macos_ble_helper.py  protocol.py  pyproject.toml  server.py
docs/: MCP.md
scripts/: test_mcp.py
web/: index.html
